# franpos-wrapper

./: Dockerfile  main.py  requirements.txt
franpos_sdk_full_package/: README.md  pyproject.toml
franpos_sdk_full_package/franpos_sdk/: __init__.py
franpos_sdk_full_package/franpos_sdk.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
franpos_sdk_full_package/franpos_sdk/endpoints/: company.py  import_module.py  pos.py  walkin.py
routers/: booking.py  common.py  company.py  customers.py  datadump.py  employee.py  import_module.py  pos.py  purchase_order.py  reports.py  settings.py  walkin.py
